fix dependency upgrade issues